--- a/ElectricityWeb/Views/Home/Index.cshtml
+++ b/ElectricityWeb/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Losses calculations";
+    ViewBag.Title = "Расчеты энергоснабжения";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -8,11 +8,11 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Losses calculations</title>
+    <title>Главная</title>
 </head>
 <body>
     <div class="general-info">
-        На этом сайте представлены расчеты потерь в электрических сетях
+        <h1>Main page</h1>
     </div>
 </body>
 </html>
