--- a/ElectricityWeb/Content/menu.css
+++ b/ElectricityWeb/Content/menu.css
@@ -1,6 +1,7 @@
 @import url(http://fonts.googleapis.com/css?family=Lato);
 
-*, *:before, *:after {
+
+nav *, *:before, *:after {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
