--- a/ElectricityWeb/Views/Home/TransmissionLoss.cshtml
+++ b/ElectricityWeb/Views/Home/TransmissionLoss.cshtml
@@ -5,56 +5,80 @@
     ViewBag.Title = "Потери в линиях электропередач";
 }
 
-@using (Html.BeginForm("TransmissionLoss", "Home", FormMethod.Post)) {
-    <fieldset>
-        <div>
-            <h1>
-                <span>@ViewBag.Error</span>
-            </h1>
-        </div>
+<section class="page-logo">
+    <img src="~/Content/Images/transmission.png" />
+</section>
 
+<section class="calcs">
+    @if (!string.IsNullOrEmpty(ViewBag.Error)) {
+        <div class="error">@ViewBag.Error</div>
+    }
+    @using (Html.BeginForm("TransmissionLoss", "Home", FormMethod.Post)) {
+        <fieldset>
+            <div class="form-group">
+                @Html.LabelFor(x => Model.PhaseCount, new { @class = "control-label" })
+                <div class="input-group">
+                    @Html.TextBoxFor(x => Model.PhaseCount, new { @class = "form-control" })
+                    <span class="input-group-addon">@Model.PhaseCountUnits</span>
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(x => Model.Resistivity, new { @class = "control-label" })
+                <div class="input-group">
+                    @Html.TextBoxFor(x => Model.Resistivity, new { @class = "form-control" })
+                    <span class="input-group-addon">@Model.ResistivityUnits</span>
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(x => Model.Current, new { @class = "control-label" })
+                <div class="input-group">
+                    @Html.TextBoxFor(x => Model.Current, new { @class = "form-control" })
+                    <span class="input-group-addon">@Model.CurrentUnits</span>
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(x => Model.Length, new { @class = "control-label" })
+                <div class="input-group">
+                    @Html.TextBoxFor(x => Model.Length, new { @class = "form-control" })
+                    <span class="input-group-addon">@Model.LengthUnits</span>
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(x => Model.Size, new { @class = "control-label" })
+                <div class="input-group">
+                    @Html.TextBoxFor(x => Model.Size, new { @class = "form-control" })
+                    <span class="input-group-addon">@Model.SizeUnits</span>
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(x => Model.Time, new { @class = "control-label" })
+                <div class="input-group">
+                    @Html.TextBoxFor(x => Model.Time, new { @class = "form-control" })
+                    <span class="input-group-addon">@Model.TimeUnits</span>
+                </div>
+            </div>
+
+            <div>
+                <input type="submit" value="Рассчитать" class="btn btn-primary" />
+            </div>
+        </fieldset>
+    }
+
+</section>
+
+<section class="results">
+    @if (Model.HasResult) {
         <div class="form-group">
-            @Html.LabelFor(x => Model.PhaseCount)
-            @Html.TextBoxFor(x => Model.PhaseCount, new { @class = "form-control" })
-            @Html.ValidationMessageFor(x => Model.PhaseCount)
+            @Html.LabelFor(x => Model.Loss, new { @class = "control-label" })
+            <div class="input-group">
+                @Html.DisplayFor(x => Model.Loss, new { @class = "form-control" })
+                @Model.LossUnits
+            </div>
         </div>
-
-        <div class="form-group">
-            @Html.LabelFor(x => Model.Resistivity)
-            @Html.TextBoxFor(x => Model.Resistivity, new { @class = "form-control" })
-            @Html.ValidationMessageFor(x => Model.Resistivity)
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(x => Model.Current)
-            @Html.TextBoxFor(x => Model.Current, new { @class = "form-control" })
-            @Html.ValidationMessageFor(x => Model.Current)
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(x => Model.Length)
-            @Html.TextBoxFor(x => Model.Length, new { @class = "form-control" })
-            @Html.ValidationMessageFor(x => Model.Length)
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(x => Model.Size)
-            @Html.TextBoxFor(x => Model.Size, new { @class = "form-control" })
-            @Html.ValidationMessageFor(x => Model.Size)
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(x => Model.Time)
-            @Html.TextBoxFor(x => Model.Time, new { @class = "form-control" })
-            @Html.ValidationMessageFor(x => Model.Time)
-        </div>
-
-        <div>
-            <input type="submit" value="Рассчитать" class="btn btn-primary"/>
-        </div>
-    </fieldset>
-}
-
-@if (Model.Value > 0) {
-    <div class="result">Потери: @Model.Value</div>
-}
+    }
+</section>
