--- a/ElectricityWeb/Content/menu.css
+++ b/ElectricityWeb/Content/menu.css
@@ -1,5 +1,8 @@
 @import url(http://fonts.googleapis.com/css?family=Lato);
 
+header {
+    height: 80px;
+}
 
 nav *, *:before, *:after {
     -webkit-box-sizing: border-box;
@@ -13,10 +16,11 @@ nav *, *:before, *:after {
 /*| Navigation |*/
 
 nav {
-    position: fixed;
+    /*position: fixed;*/
     top: 0;
     left: 0;
     width: 100%;
+    height: 100%;
     background: #b1c3cd;
     box-shadow: 0 3px 10px -2px rgba(0,0,0,.1);
     border: 1px solid rgba(0,0,0,.1);
