--- a/ElectricityWeb/Content/site.css
+++ b/ElectricityWeb/Content/site.css
@@ -5,12 +5,18 @@ body {
     
 }
 
+@media screen and (max-width: 1024px) {
+    .page-logo {
+        display: none !important;
+    }
+}
+
 .input-group {
-    width: 50%;
+    width: 80%;
 }
 
 .input-group-addon {
-    width: 100px;
+    width: 30%;
 }
 
 .input-validation-error {
@@ -24,12 +30,17 @@ body {
 
 .page-logo {
     float: left;
-    width: 30%;
+    width: 20%;
+}
+
+img.visualizing {
+    width: 150px;
+    height: 150px;
 }
 
 .calcs {
-    display: inline-block;
-    width: 30%;
+    float: left;
+    width: 40%;
 }
 
 .results {
