--- a/ElectricityWeb/Views/Home/TransmissionLoss.cshtml
+++ b/ElectricityWeb/Views/Home/TransmissionLoss.cshtml
@@ -6,7 +6,7 @@
 }
 
 <section class="page-logo">
-    <img src="~/Content/Images/transmission.png" />
+    <img src="~/Content/Images/transmission.png" class="visualizing" />
 </section>
 
 <section class="calcs">
