Line choosing page working
Need to choose cable model from DB

--- a/ElectricityWeb/Views/Shared/_Layout.cshtml
+++ b/ElectricityWeb/Views/Shared/_Layout.cshtml
@@ -32,6 +32,12 @@
                         <li><a href="@Url.Action("Serial", "Engine")">Двигатель последовательного возбуждения</a></li>
                     </ul>
                 </li>
+                <li>
+                    <a href="#">Линии</a>
+                    <ul>
+                        <li><a href="@Url.Action("Choose", "Line")">Расчет сечения провода</a></li>
+                    </ul>
+                </li>
                 <li><a href="#">О сайте</a></li>
             </ul>
         </nav>
