--- a/ElectricityWeb/Views/Engine/Serial.cshtml
+++ b/ElectricityWeb/Views/Engine/Serial.cshtml
@@ -6,7 +6,7 @@
 }
 
 <section class="page-logo">
-    <img src="~/Content/Images/engine.png" class="visualizing" />
+    <img src="~/Content/Images/engine2.png" class="visualizing" />
 </section>
 <section class="calcs">
     @if (!string.IsNullOrEmpty(ViewBag.Error)) {
