--- a/ElectricityWeb/Content/site.css
+++ b/ElectricityWeb/Content/site.css
@@ -1,7 +1,7 @@
 ﻿@import url(http://fonts.googleapis.com/css?family=Scada&subset=latin,cyrillic);
 
 body {
-    background-color: #b1c3cd;
+    background-color: #EAE7D6;
     
 }
 
