SASS, Skeleton support
Remake design

--- a/ElectricityWeb/Content/scss/menu.scss
+++ b/ElectricityWeb/Content/scss/menu.scss
@@ -1,6 +1,5 @@
-@import url(http://fonts.googleapis.com/css?family=Scada&subset=latin,cyrillic);
-@import url(http://fonts.googleapis.com/css?family=Lato);
-@import url(http://fonts.googleapis.com/css?family=Philosopher&subset=cyrillic);
+﻿@import "variables.scss";
+
 /*
 header {
     height: 80px;
@@ -102,5 +101,3 @@ nav {
         }
     }
 }*/
-
-/*# sourceMappingURL=menu.css.map */
