--- a/ElectricityWeb/Content/site.css
+++ b/ElectricityWeb/Content/site.css
@@ -1,56 +1,52 @@
-﻿@import url(http://fonts.googleapis.com/css?family=Scada&subset=latin,cyrillic);
-
+@import url(http://fonts.googleapis.com/css?family=Scada&subset=latin,cyrillic);
+@import url(http://fonts.googleapis.com/css?family=Lato);
+@import url(http://fonts.googleapis.com/css?family=Philosopher&subset=cyrillic);
 body {
-    background-color: #EAE7D6;
-    
-}
+  background-color: #EAE7D6; }
 
 @media screen and (max-width: 1024px) {
-    .page-logo {
-        display: none !important;
-    }
-}
-
+  .page-logo {
+    display: none !important; } }
 .input-group {
-    width: 80%;
-}
+  width: 80%; }
 
 .input-group-addon {
-    width: 30%;
-}
+  width: 30%; }
 
 .input-validation-error {
-    background-color: #f7adad;
-    font-weight: bold;
-}
+  background-color: #f7adad;
+  font-weight: bold; }
 
 .error {
-    color: #a12525;
-}
+  color: #a12525; }
 
 .page-logo {
-    float: left;
-    width: 20%;
-}
+  float: left;
+  width: 20%; }
 
 img.visualizing {
-    width: 150px;
-    height: 150px;
-}
+  width: 200px;
+  height: 200px; }
 
 .calcs {
-    float: left;
-    width: 40%;
-}
+  float: left;
+  width: 40%; }
 
 .results {
-    float: right;
-    width: 40%;
-}
+  float: right;
+  width: 40%; }
 
 main {
-    margin: 100px auto 0 auto;
-    width: 80%;
-    font-family: 'Scada', sans-serif;
-    color: #222;
-}
+  font-family: "Scada", sans-serif;
+  color: #222; }
+
+header {
+  background-color: #24C2CB;
+  height: 100px; }
+  header h1 {
+    font-family: "Philosopher", sans-serif; }
+
+aside {
+  background-color: #EF525B; }
+
+/*# sourceMappingURL=site.css.map */
