--- a/ElectricityWeb/Views/Home/Index.cshtml
+++ b/ElectricityWeb/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Расчеты энергоснабжения";
+    ViewBag.Title = "Расчеты параметров энергоснабжения";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -11,8 +11,5 @@
     <title>Главная</title>
 </head>
 <body>
-    <div class="general-info">
-        <h1>Main page</h1>
-    </div>
 </body>
 </html>
