--- a/ElectricityWeb/Views/Shared/_Layout.cshtml
+++ b/ElectricityWeb/Views/Shared/_Layout.cshtml
@@ -10,10 +10,6 @@
     ------------------------------------------------>
     <script src="http://code.jquery.com/jquery.min.js"></script>
 
-    <!--Favicon
-    ------------------------------------------------>
-    <link rel="icon" type="image/png" href="~/Content/Images/favicon.png" />
-
     <!-- Skeleton styles
     ------------------------------------------------>
     <link href="~/Content/skeleton/normalize.css" rel="stylesheet" />
@@ -27,49 +23,50 @@
 
     <!-- Custom styles
     ------------------------------------------------>
-    <link rel="stylesheet" href="~/Content/site.css" />
-    <link rel="stylesheet" href="~/Content/menu.css" />
+    <link rel="stylesheet" href="~/Styles/css/site.css" />
+    <link rel="stylesheet" href="~/Styles/css/menu.css" />
 
 </head>
-<body class="container">
-    <header>
-        <h1>Расчет параметров энергоснабжения</h1>
-    </header>
-    <main class="row">
+<body class="container u-max-full-width">
+    <div class="row">
         <aside class="three columns">
             <nav role="navigation">
                 <ul>
-                    <li><a href="@Url.Action("Index", "Home")">Главная</a></li>
+                    <li class="menu-item"><div class="indented"><a href="@Url.Action("Index", "Home")">Главная</a></div></li>
                     <li>
-                        <a href="#">Потери</a>
+                        <span class="indented">Потери</span>
                         <ul>
-                            <li><a href="@Url.Action("TransformatorLoss", "Home")">Потери в трансформаторе</a></li>
-                            <li><a href="@Url.Action("TransmissionLoss", "Home")">Потери в линиях передач</a></li>
+                            <li class="menu-item">
+                                <div class="indented"><a href="@Url.Action("TransformatorLoss", "Home")">Потери в трансформаторе</a></div>
+                            </li>
+                            <li class="menu-item"><div class="indented"><a href="@Url.Action("TransmissionLoss", "Home")">Потери в линиях передач</a></div></li>
                         </ul>
                     </li>
                     <li>
-                        <a href="#">Двигатели</a>
+                        <span class="indented">Двигатели</span>
                         <ul>
-                            <li><a href="@Url.Action("Async", "Engine")">Асинхронный двигатель</a></li>
-                            <li><a href="@Url.Action("Parallel", "Engine")">Двигатель параллельного возбуждения</a></li>
-                            <li><a href="@Url.Action("Serial", "Engine")">Двигатель последовательного возбуждения</a></li>
+                            <li class="menu-item"><div class="indented"><a href="@Url.Action("Async", "Engine")">Асинхронный двигатель</a></div></li>
+                            <li class="menu-item"><div class="indented"><a href="@Url.Action("Parallel", "Engine")">Двигатель параллельного возбуждения</a></div></li>
+                            <li class="menu-item"><div class="indented"><a href="@Url.Action("Serial", "Engine")">Двигатель последовательного возбуждения</a></div></li>
                         </ul>
                     </li>
                     <li>
-                        <a href="#">Линии</a>
+                        <span class="indented">Линии</span>
                         <ul>
-                            <li><a href="@Url.Action("Choose", "Line")">Расчет сечения провода</a></li>
+                            <li class="menu-item"><div class="indented"><a href="@Url.Action("Choose", "Line")">Расчет сечения провода</a></div></li>
                         </ul>
                     </li>
-                    <li><a href="#">О сайте</a></li>
+                    <li class="menu-item"><div class="indented"><a href="#">О сайте</a></div></li>
                 </ul>
             </nav>
         </aside>
-        <section class="nine columns">
+        <main class="nine columns">
+            <header>
+                <h1>@ViewBag.Title</h1>
+            </header>
             @RenderBody()
-        </section>
-    </main>
-    <footer></footer>
+        </main>
+    </div>
 
     <script src="~/Scripts/menu.js"></script>
 </body>
