Color theme changed

--- a/ElectricityWeb/Styles/scss/_variables.scss
+++ b/ElectricityWeb/Styles/scss/_variables.scss
@@ -3,12 +3,12 @@
 @import url(http://fonts.googleapis.com/css?family=Philosopher&subset=cyrillic);
 
 // Colors
-$body-background-color: #0C1127;
-$body-text-color: #CFB3C8;
+$body-background-color: #6E6E6E;
+$body-text-color: #FFF;
 
-$menu-background-color: #D3366F;
+$menu-background-color: #393939;
 $menu-hover-color: $menu-background-color * 0.9;
-$menu-link-color: #74042A;
+$menu-link-color: #F3843E;
 $menu-link-hover-color: $menu-link-color * 1.2;
 
 $input-error-background: #f7adad;
@@ -16,7 +16,7 @@ $error-text-color: #a12525;
 
 $input-background-color: $body-background-color;
 $input-border-color: #fff;
-$input-text-color: #CE7AB9;
+$input-text-color: #FF9900;
 
 $header-background-color: #24C2CB;
 
