--- a/ElectricityWeb/Styles/scss/menu.css
+++ b/ElectricityWeb/Styles/scss/menu.css
@@ -1,11 +1,11 @@
-﻿@import url(http://fonts.googleapis.com/css?family=Scada&subset=latin,cyrillic);
+@import url(http://fonts.googleapis.com/css?family=Scada&subset=latin,cyrillic);
 @import url(http://fonts.googleapis.com/css?family=Lato);
 @import url(http://fonts.googleapis.com/css?family=Philosopher&subset=cyrillic);
 nav {
   font-size: 28px;
-  font-family: 'Philosopher', sans-serif;
+  font-family: "Philosopher", sans-serif;
   font-weight: 700;
-  color: #74042A; }
+  color: #F3843E; }
   nav .indented {
     margin-left: 20px;
     margin-right: 10px; }
@@ -16,13 +16,15 @@ nav {
       font-size: 18px; }
   nav a {
     text-decoration: none;
-    color: #74042A; }
+    color: #F3843E; }
     nav a:hover {
-      color: #8b0532; }
+      color: #ff9e4a; }
   nav .menu-item:hover {
-    background-color: #be3164; }
+    background-color: #333333; }
 
 aside {
-  background-color: #D3366F;
+  background-color: #393939;
   height: 100%;
   width: 300px; }
+
+/*# sourceMappingURL=menu.css.map */
