--- a/ElectricityWeb/Styles/scss/site.css
+++ b/ElectricityWeb/Styles/scss/site.css
@@ -1,11 +1,11 @@
-﻿@import url(http://fonts.googleapis.com/css?family=Scada&subset=latin,cyrillic);
+@import url(http://fonts.googleapis.com/css?family=Scada&subset=latin,cyrillic);
 @import url(http://fonts.googleapis.com/css?family=Lato);
 @import url(http://fonts.googleapis.com/css?family=Philosopher&subset=cyrillic);
 html, body {
   height: 100%; }
 
 body {
-  background-color: #0C1127; }
+  background-color: #6E6E6E; }
 
 .input-group {
   width: 80%; }
@@ -37,8 +37,8 @@ img.visualizing {
   width: 40%; }
 
 main {
-  font-family: 'Scada', sans-serif;
-  color: #CFB3C8; }
+  font-family: "Scada", sans-serif;
+  color: #FFF; }
 
 .container {
   width: 100%;
@@ -48,8 +48,10 @@ main {
   height: 100%; }
 
 input[type="text"] {
-  background-color: #0C1127;
+  background-color: #6E6E6E;
   border: 1px solid #fff; }
   input[type="text"]:focus {
     border: 2px solid #fff;
     font-weight: 700; }
+
+/*# sourceMappingURL=site.css.map */
