--- a/ElectricityWeb/Views/Shared/_Layout.cshtml
+++ b/ElectricityWeb/Views/Shared/_Layout.cshtml
@@ -23,8 +23,8 @@
 
     <!-- Custom styles
     ------------------------------------------------>
-    <link rel="stylesheet" href="~/Styles/css/site.css" />
-    <link rel="stylesheet" href="~/Styles/css/menu.css" />
+    <link rel="stylesheet" href="~/Styles/scss/site.css" />
+    <link rel="stylesheet" href="~/Styles/scss/menu.css" />
 
 </head>
 <body class="container u-max-full-width">
